Nav wrap mobile fix

--- a/css/nav.css
+++ b/css/nav.css
@@ -108,10 +108,9 @@ a.nav-button {
         background-position: left;
     }
     .nav-wrap {
-        display: block;
         height: 174px;
+        margin: 0 0 -1px 0;
         width: 100%;
-        float: left;
     }
     .nav#nav_music { 
         width: 100%;
